# big-burger-bumpin-king

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: progress-dashboard.yml
config/: BigBumpin.toml
docs/superpowers/plans/: 2026-07-18-phase1-static-recompilation-pipeline.md  2026-07-18-phase2a-host-bootstrap-harness.md  2026-07-18-phase2b-real-kernel-stubs.md  2026-07-18-phase2c-handle-table-and-simple-stubs.md  2026-07-18-phase2d-file-io-no-hard-disk.md  2026-07-18-phase2e-memory-stats-and-physical-alloc.md  2026-07-18-phase2f-thread-delay-tls-and-input.md  2026-07-18-phase2g-irql-spinlocks-and-object-refs.md  2026-07-18-phase2h-real-thread-spawning.md  2026-07-18-phase2i-real-wait-timeout.md  2026-07-18-phase2j-misc-and-graphics-noop.md  2026-07-18-phase2k-real-critical-sections.md  2026-07-18-phase2l-kequeryperformancefrequency-fix.md  2026-07-18-phase2n-real-thread-wait.md  2026-07-18-phase2p-real-ntsetevent.md  2026-07-18-phase2r-r13-sda-base-fix.md  2026-07-19-phase2t-host-driven-tick-counter.md  2026-07-19-phase3a-real-xdvdfs-file-io.md  2026-07-20-phase3k-gpu-command-tracer.md
docs/superpowers/specs/: 2026-07-18-phase1-static-recompilation-pipeline-design.md  2026-07-18-phase2a-host-bootstrap-harness-design.md  2026-07-18-phase2b-real-kernel-stubs-design.md  2026-07-18-phase2c-handle-table-and-simple-stubs-design.md  2026-07-18-phase2d-file-io-no-hard-disk-design.md  2026-07-18-phase2e-memory-stats-and-physical-alloc-design.md  2026-07-18-phase2f-thread-delay-tls-and-input-design.md  2026-07-18-phase2g-irql-spinlocks-and-object-refs-design.md  2026-07-18-phase2h-real-thread-spawning-design.md  2026-07-18-phase2i-real-wait-timeout-design.md  2026-07-18-phase2j-misc-and-graphics-noop-design.md  2026-07-18-phase2k-real-critical-sections-design.md  2026-07-18-phase2l-kequeryperformancefrequency-fix-design.md  (+20 more)
host/: gpu_trace.cpp  gpu_trace.h  kernel_impl.cpp  kernel_imports.txt  kernel_stubs.cpp  main.cpp  xdvdfs.cpp  xdvdfs.h
tools/: CMakeLists.txt  dashboard_template.html  find_special_addresses.cpp  generate_kernel_stubs.py  generate_progress_dashboard.py
